--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   animated_text_kit: ^2.0.1
   firebase_core: ^0.4.4+3
   firebase_auth: ^0.16.0
+  font_awesome_flutter: ^8.8.1
+  flutter_staggered_grid_view: ^0.2.7
   modal_progress_hud: ^0.1.3
   cloud_firestore: ^0.13.6
 
@@ -54,4 +56,7 @@ flutter:
     fonts:
      - asset: fonts/EuphoriaScript-Regular.ttf
 
+  - family: RaphLanokFuture
+    fonts:
+     - asset: fonts/RaphLanokFuture.ttf
 
