--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.2.7
   modal_progress_hud: ^0.1.3
   cloud_firestore: ^0.13.6
+  shared_preferences: ^0.5.8
 
 dev_dependencies:
   flutter_test:
