--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   modal_progress_hud: ^0.1.3
   cloud_firestore: ^0.13.6
   shared_preferences: ^0.5.8
+  image_picker: ^0.6.7+4
+  firebase_storage: ^3.1.6
 
 dev_dependencies:
   flutter_test:
